feat: PIT mutation testing + learn mode also orders when index exists
- MutationAnalysisOperation: parse PIT XML, compute per-test kill rates,
  update state file; expose package-private helpers for unit testing
- MutationAnalyzeMojo: mvn test-order:analyze-mutations goal
- DashboardGenerator: mutation section with kill-rate tiers and per-test
  killRate field; fix normalizeDashboardData dropping ml/mutation fields
- MutationTab.vue: dashboard tab showing kill-rate breakdown
- TestOrderState: killRates map + killRateBonus ScoringWeights component
- TestScorer: kill-rate bonus and multiplier on dep-overlap score
- PrepareMojo: learn mode now also injects orderer when an index already
  exists (both explicit mode=learn and auto-triggered paths)
- Tests: MutationAnalysisOperationTest (15 cases), kill-rate scoring
  tests in DepsAndScoringTest, kill-rate persistence in TestOrderStateTest,
  dashboard mutation section tests in GenerateDashboardOperationTest